--- a/package.json
+++ b/package.json
@@ -45,6 +45,9 @@
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.1",
     "genkit": "^1.15.5",
+    "google-auth-library": "^10.2.0",
+    "googleapis": "^154.1.0",
+    "jose": "^6.0.12",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
     "pg": "^8.12.0",
