--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@genkit-ai/next": "^1.15.5",
     "@hookform/resolvers": "^4.1.3",
     "@opentelemetry/exporter-jaeger": "^1.25.1",
+    "@opentelemetry/winston-transport": "^0.16.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-avatar": "^1.1.3",
